# fustatai

./: LICENSE  NOTICE  README.md
src/orchestrator/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  run.py  test.http
src/orchestrator/migrations/: env.py
src/orchestrator/migrations/versions/: 030cbfdb3bcf_added_version_table.py  31f392f4e451_added_orchestrator_table_app_fields.py  50828418ad89_added_agent_table.py  63a705fda90d_added_new_columns_to_agent_and_.py  69dd3c825cbe_added_orchestrator_table.py  71f30ce938a2_added_mcpserver_table.py  96596de1221c_added_apikey_table.py  fbb6df3a3f18_initial.py
src/orchestrator/scripts/: seed.py
src/orchestrator/src/: main.py
src/orchestrator/src/api/: agent.py  api_key.py  apps.py  chat.py  mcp_server.py  orchestrator.py  version.py
src/orchestrator/src/core/: database.py
src/orchestrator/src/crud/: agent.py  api_key.py  apps.py  mcp_server.py  orchestrator.py  version.py
src/orchestrator/src/models/: agent.py  api_key.py  base.py  mcp_server.py  orchestrator.py  orm_import.py  version.py
src/orchestrator/src/orchestrator/: runtime_service.py
src/orchestrator/src/orchestrator/core/: conversation_config.py  llm_provider.py  mcp_service.py  memory_service.py
src/orchestrator/src/orchestrator/helpers/: hitl.py  utils.py
src/orchestrator/src/orchestrator/llm_agents/: ai_agent_generator.py  ai_agent_generator_prompt.py  main_agent.py  main_agent_prompt.py  (+2 more)
src/orchestrator/src/schemas/: agent.py  api_key.py  apps.py  chat_stream.py  chat_sync.py  mcp_server.py  orchestrator.py  version.py
(+109 files in other folders)
